# eng

./: .gitignore  Cargo.toml  GEMINI.md  QWEN.md
.gemini/commands/kiro/: spec-init.toml  spec-requirements.toml  spec-status.toml  spec-tasks.toml  validate-gap.toml
.kiro/specs/00-emacs-next-gen-editor/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/01-process-rpc/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/02-buffer-design/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/03-buffer-impl-core/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/04-buffer-properties/: requirements.md  spec.json  tasks.md
.kiro/specs/05-agent-setup/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/06-agent-lifecycle/: requirements.md  spec.json  tasks.md
.kiro/specs/emacs-next-gen-editor/: requirements.md  spec.json
.kiro/steering/: product.md  structure.md  tech.md
.qwen/commands/kiro/: spec-design.toml  spec-impl.toml  steering.toml  validate-design.toml
eng-agent/: Cargo.toml
eng-agent/src/: launcher.rs  main.rs  runtime.rs  view.rs
eng-core/: Cargo.toml
eng-core/src/: auth.rs  buffer.rs  lib.rs  main.rs  style.rs
proto/: editor.v1.proto
scripts/: test_agent_lifecycle.sh  test_integration.sh
ui/: Cargo.toml  build.rs
ui/src/: launcher.rs  main.rs  view_tree.rs
